Sort the keys in descending order

--- a/piscine42/rush02/Makefile
+++ b/piscine42/rush02/Makefile
@@ -1,6 +1,7 @@
 TARGET = rush-02
 INCLUDE = ./include
-SRC = main.c dict.c parse_dict.c stralloc.c strconv.c strio.c strsplit.c strutil.c 
+SRC = main.c dict.c parse_dict.c stralloc.c strconv.c \
+      strio.c strsplit.c strutil.c sortdict.c
 PRE = ./src/
 SRCS = ${addprefix ${PRE}, ${SRC}}
 OBJS = ${SRCS:.c=.o}
