Complete writing code for ex02 but it does not work

--- a/piscine42/c10tmp/ex02/Makefile
+++ b/piscine42/c10tmp/ex02/Makefile
@@ -1,7 +1,7 @@
 TARGET = ft_tail
-SRCFILE = main.c
+SRCFILE = main.c util.c
 SRCPATH = ./src/
-SRCS = $(addprefix $(SRCFILE), $(SRCPATH))
+SRCS = $(addprefix $(SRCPATH), $(SRCFILE))
 OBJS = $(SRCS:.c=.o)
 HEADERS = ./include/
 CC = cc
