--- a/piscine42/c10tmp/ex03/Makefile
+++ b/piscine42/c10tmp/ex03/Makefile
@@ -1,8 +1,22 @@
-CFLAGS = -Wall -Wextra -Werror
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: vietnguy <vietnguy@student.42singapore.sg  +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/07/12 15:48:59 by vietnguy          #+#    #+#              #
+#    Updated: 2023/07/12 15:49:41 by vietnguy         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+CFLAGS = -g -Wall -Wextra -Werror
 
 TARGET = ft_hexdump
 SOURCES = $(wildcard *.c)
 OBJECTS = $(SOURCES:.c=.o)
+
+.PHONY: all clean fclean re
 
 all: $(TARGET)
 
